(event comments): reply to comments; notification emails

--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberForm.cshtml
@@ -28,3 +28,8 @@
     @Html.OdkCheckBoxFor(x => x.SendNewMemberEmails, new { @class = "form-check-input" })
     @Html.LabelFor(x => x.SendNewMemberEmails, new { @class = "form-check-label" })
 </div>
+
+<div class="form-check mb-3">
+    @Html.OdkCheckBoxFor(x => x.ReceiveEventCommentEmails, new { @class = "form-check-input" })
+    @Html.LabelFor(x => x.ReceiveEventCommentEmails, new { @class = "form-check-label" })
+</div>
