--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberContent.cshtml
@@ -9,6 +9,7 @@
         AdminEmailAddress = Model.AdminMember.AdminEmailAddress,
         Name = Model.Member.FullName,
         ReceiveContactEmails = Model.AdminMember.ReceiveContactEmails,
+        ReceiveEventCommentEmails = Model.AdminMember.ReceiveEventCommentEmails,
         ReceiveNewMemberEmails = Model.AdminMember.ReceiveNewMemberEmails,
         SendNewMemberEmails = Model.AdminMember.SendNewMemberEmails
     })
