--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventContent.cshtml
@@ -15,8 +15,20 @@
 
 @await Html.PartialAsync("Admin/Events/_EventAdminTabs", Model)
 
+@if (Model.Event.PublishedUtc == null)
+{
+    <form action="/@Model.Chapter.Name/Admin/Events/@Model.Event.Id/Publish" method="post">
+        <div class="mb-3">
+            <button class="btn btn-primary" type="submit">
+                <i class="fa-solid fa-upload"></i>
+                Publish
+            </button>
+        </div>
+    </form>
+}
+
 <form method="post" action="/@Model.Chapter.Name/Admin/Events/@Model.Event.Id">
-    @Html.AntiForgeryToken()
+    @Html.AntiForgeryToken()    
     @await Html.PartialAsync("Admin/Events/_EventForm", new EventFormViewModel
     {
         ChapterId = Model.Chapter.Id,
@@ -26,7 +38,7 @@
         Hosts = Model.Hosts?.Select(x => x.MemberId).ToList() ?? [],
         HostOptions = hostOptions,
         ImageUrl = Model.Event.ImageUrl,
-        Name = Model.Event.Name,
+        Name = Model.Event.GetDisplayName(),
         Public = Model.Event.IsPublic,
         Time = Model.Event.Time,
         Venue = Model.Event.VenueId
