--- a/ODK.Web.Razor/Views/Shared/Events/_EventContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventContent.cshtml
@@ -1,8 +1,29 @@
 ﻿@using ODK.Core.Members
 @using ODK.Core.Utils
+@using ODK.Services.Authentication
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Events
 @model ODK.Web.Razor.Models.Events.EventContentViewModel
+
+@if (User.IsInRole(OdkRoles.Admin) && Model.CurrentMember?.ChapterId == Model.Chapter.Id)
+{
+    <div class="mb-3 button-container">
+        <a href="/@Model.Chapter.Name/Admin/Events/@Model.Event.Id" class="btn btn-outline-secondary">
+            <i class="fa-solid fa-pen-to-square"></i>
+            Edit
+        </a>
+
+        @if (Model.Event.PublishedUtc == null)
+        {
+            <form action="/@Model.Chapter.Name/Admin/Events/@Model.Event.Id/Publish" method="post">
+                <button class="btn btn-primary">
+                    <i class="fa-solid fa-upload"></i>
+                    Publish
+                </button>
+            </form>
+        }
+    </div>
+}
 
 <h2>@Model.Venue.Name</h2>
 <h4>@Model.Event.Date.EventDate(true)</h4>
