(event admin): save hosts on event create

--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventContent.cshtml
@@ -38,7 +38,7 @@
         Hosts = Model.Hosts?.Select(x => x.MemberId).ToList() ?? [],
         HostOptions = hostOptions,
         ImageUrl = Model.Event.ImageUrl,
-        Name = Model.Event.GetDisplayName(),
+        Name = Model.Event.Name,
         Public = Model.Event.IsPublic,
         Time = Model.Event.Time,
         Venue = Model.Event.VenueId
