use view model for chapter home page

--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventAttendeesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventAttendeesContent.cshtml
@@ -13,7 +13,7 @@
     var (members, responses) = (dto.Members, dto.Responses);
 
     var responsesDictionary = responses
-        .ToDictionary(x => x.MemberId, x => x.ResponseTypeId);
+        .ToDictionary(x => x.MemberId, x => x.Type);
 }
 
 @await Html.PartialAsync("Admin/Events/_EventHeader")
