--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventResponses.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventResponses.cshtml
@@ -18,22 +18,28 @@
         .Where(x => !x.Disabled)
         .ToDictionary(x => x.Id);
     var responseDictionary = responses
-        .GroupBy(x => x.ResponseTypeId)
+        .GroupBy(x => x.Type)
         .ToDictionary(x => x.Key, x => x.ToArray());
     var membersByResponse = responses
-        .GroupBy(x => x.ResponseTypeId)
+        .GroupBy(x => x.Type)
         .ToDictionary(
             group => group.Key, 
             group => group
-                .Select(x => new ListMemberViewModel(Model.Chapter, memberDictionary[x.MemberId]))
+                .Select(x => new ListMemberViewModel
+                {
+                    Chapter = Model.Chapter,
+                    Member = memberDictionary[x.MemberId]
+                })
                 .ToArray());
 }
 
 @if (membersByResponse.ContainsKey(EventResponseType.Yes))
 {
     <h5>Going</h5>
-    @await Html.PartialAsync("Members/_MemberList", new MemberListViewModel(Model.Chapter, membersByResponse[EventResponseType.Yes]) 
+    @await Html.PartialAsync("Members/_MemberList", new MemberListViewModel
     { 
+        Chapter = Model.Chapter,
+        Members = membersByResponse[EventResponseType.Yes],
         Size = "xs",
         Cols = cols
     })
@@ -42,8 +48,10 @@
 @if (membersByResponse.ContainsKey(EventResponseType.Maybe))
 {
     <h5>Maybe</h5>
-    @await Html.PartialAsync("Members/_MemberList", new MemberListViewModel(Model.Chapter, membersByResponse[EventResponseType.Maybe])
+    @await Html.PartialAsync("Members/_MemberList", new MemberListViewModel
     {
+        Chapter = Model.Chapter,
+        Members = membersByResponse[EventResponseType.Maybe],
         Size = "xs",
         Cols = cols
     })
@@ -52,8 +60,10 @@
 @if (membersByResponse.ContainsKey(EventResponseType.No))
 {
     <h5>Declined</h5>
-    @await Html.PartialAsync("Members/_MemberList", new MemberListViewModel(Model.Chapter, membersByResponse[EventResponseType.No])
+    @await Html.PartialAsync("Members/_MemberList", new MemberListViewModel
     {
+        Chapter = Model.Chapter,
+        Members = membersByResponse[EventResponseType.No],
         Size = "xs",
         Cols = cols
     })
@@ -62,8 +72,10 @@
 @if (membersByResponse.ContainsKey(EventResponseType.None))
 {
     <h5>No response</h5>
-    @await Html.PartialAsync("Members/_MemberList", new MemberListViewModel(Model.Chapter, membersByResponse[EventResponseType.None])
+    @await Html.PartialAsync("Members/_MemberList", new MemberListViewModel
     {
+        Chapter = Model.Chapter,
+        Members = membersByResponse[EventResponseType.None],
         Size = "xs",
         Cols = cols
     })
@@ -72,8 +84,10 @@
 @if (membersByResponse.ContainsKey(EventResponseType.NotInvited))
 {
     <h5>Not invited</h5>
-    @await Html.PartialAsync("Members/_MemberList", new MemberListViewModel(Model.Chapter, membersByResponse[EventResponseType.NotInvited])
+    @await Html.PartialAsync("Members/_MemberList", new MemberListViewModel
     {
+        Chapter = Model.Chapter,
+        Members = membersByResponse[EventResponseType.NotInvited],
         Size = "xs",
         Cols = cols
     })
