--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -11,19 +11,19 @@
 
     var settings = await ChapterAdminService.GetChapterEventSettings(memberId, Model.Id);
     var nextEventDate = await EventAdminService.GetNextAvailableEventDate(memberId, Model);
-    var chapterAdminMembers = await ChapterAdminService.GetChapterAdminMemberDtos(memberId, Model.Id);
+    var chapterAdminMembers = await ChapterAdminService.GetChapterAdminMembers(memberId, Model.Id);
 
     if (nextEventDate == null)
     {
         nextEventDate = DateTime.Today;
     }
 
-    var hostOptions = chapterAdminMembers.Members
+    var hostOptions = chapterAdminMembers
         .Select(x => new SelectListItem
-                {
-                    Value = x.Id.ToString(),
-                    Text = x.FullName
-                })
+        {
+            Value = x.Id.ToString(),
+            Text = x.Member.FullName
+        })
         .ToArray();
 }
 
