--- a/ODK.Web.Razor/Views/Shared/Account/_AccountContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_AccountContent.cshtml
@@ -2,10 +2,11 @@
 @using ODK.Web.Razor.Models.Members
 @model ODK.Web.Razor.Models.Account.AccountContentViewModel
 @{
-    if (Model.CurrentMember.ChapterId != Model.Chapter.Id)
+    if (!Model.CurrentMember.IsMemberOf(Model.Chapter.Id))
     {
         return;
     }
+    
 }
 
 <div class="row row-cols-2">
