--- a/ODK.Web.Razor/Views/Shared/Account/_ForgottenPasswordForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ForgottenPasswordForm.cshtml
@@ -4,7 +4,7 @@
     Enter your registered email address below to receive a link that will enable you to reset your password. The link will remain active for 30 minutes.
 </p>
 
-<form method="post" action="/Account/Password/Forgotten">
+<form method="post" action="@(Model.Chapter != null ? $"/{Model.Chapter.Name}" : "")/Account/Password/Forgotten">
     @Html.AntiForgeryToken()
     
     <div class="form-group mb-3 required">
