--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventContent.cshtml
@@ -5,7 +5,7 @@
     var hostOptions = Model.ChapterAdminMembers
         ?.Select(x => new SelectListItem
         {
-            Value = x.Id.ToString(),
+            Value = x.MemberId.ToString(),
             Text = x.Member.FullName
         })
         .ToArray() ?? [];
