--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -21,7 +21,7 @@
     var hostOptions = chapterAdminMembers
         .Select(x => new SelectListItem
         {
-            Value = x.Id.ToString(),
+            Value = x.MemberId.ToString(),
             Text = x.Member.FullName
         })
         .ToArray();
