--- a/ODK.Web.Razor/Views/Shared/Errors/_ErrorPage.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Errors/_ErrorPage.cshtml
@@ -1,2 +1,11 @@
-﻿@model System.Net.HttpStatusCode
+﻿@using System.Net
+@model HttpStatusCode
 
+@switch (Model)
+{
+    case HttpStatusCode.Forbidden:
+        <p>
+            You are not permitted to view that page
+        </p>
+        break;
+}
