--- a/ODK.Web.Razor/Views/Shared/Events/_EventSidebar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventSidebar.cshtml
@@ -11,7 +11,7 @@
 @inject IEventService EventService
 @inject IRequestCache RequestCache
 @{
-    if (Model.Member == null || Model.Member.ChapterId != Model.Chapter.Id)
+    if (Model.Member == null || !Model.Member.IsMemberOf(Model.Chapter.Id))
     {
         return;
     }
