--- a/ODK.Web.Razor/Views/Shared/Members/_SubscriptionAlert.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Members/_SubscriptionAlert.cshtml
@@ -13,21 +13,26 @@
         return;
     }
 
+    var chapterContext = new ChapterPageContext(RequestCache, Context);
+    var chapter = await chapterContext.GetChapterAsync();
+    if (chapter == null)
+    {
+        return;
+    }
+
     var member = await RequestCache.GetMemberAsync(memberId.Value);
     if (member == null)
     {
         return;
     }
-
-    var chapter = await RequestCache.GetChapterAsync(member.ChapterId);
-
-    var membershipSettings = await RequestCache.GetChapterMembershipSettingsAsync(member.ChapterId);
+    
+    var membershipSettings = await RequestCache.GetChapterMembershipSettingsAsync(chapter.Id);
     if (membershipSettings == null)
     {
         return;
     }
 
-    var memberSubscription = await RequestCache.GetMemberSubscriptionAsync(memberId.Value);
+    var memberSubscription = await RequestCache.GetMemberSubscriptionAsync(memberId.Value, chapter.Id);
     if (memberSubscription == null)
     {
         return;
