--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_MembersContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_MembersContent.cshtml
@@ -23,7 +23,7 @@
             <tr>
                 <td>@adminMember.Member.FullName</td>
                 <td>
-                    @if (Model.OwnerId == adminMember.Id)
+                    @if (Model.OwnerId == adminMember.MemberId)
                     {
                         <i class="fa-solid fa-star text-warning"></i>
                     }
