--- a/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_Navbar.cshtml
@@ -1,16 +1,29 @@
-﻿@using ODK.Services.Caching
+﻿@using ODK.Core.Chapters
+@using ODK.Services.Caching
 @using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Header
 @model ODK.Web.Razor.Models.Header.NavbarViewModel
 @inject IRequestCache RequestCache
 @{
+    Chapter? memberChapter = null;
+
+    if (Model.Member != null)
+    {
+        if (Model.Chapter != null && Model.Member.IsMemberOf(Model.Chapter.Id))
+        {
+            memberChapter = Model.Chapter;
+        }
+        else if (Model.Member.Chapters.Count > 0)
+        {
+            memberChapter = await RequestCache.GetChapterAsync(Model.Member.Chapters.First().ChapterId);
+        }
+    }
+
     var accountMenu = new AccountMenuViewModel
     {
         CurrentChapter = Model.Chapter,
         Member = Model.Member,
-        MemberChapter = Model.Member != null
-            ? Model.Chapter?.Id == Model.Member.ChapterId ? Model.Chapter : await RequestCache.GetChapterAsync(Model.Member.ChapterId)
-            : null
+        MemberChapter = memberChapter
     };
 
     var id = Model.Id ?? "navbar-main";
